--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,12 @@
       <div class="subHeader flexContainer">
         <h2 class="todo-title main-font center">To Do's</h2>
       </div>
+
+      <form action="/addtodo" method="POST">
+        <input type="text" placeholder="Add a To Do" name="Add a To Do" />
+        <button type="submit" class="submitButton">Submit</button>
+      </form>
+
       <div class="to-do-list flexContainer">
         <ul class="task-list center" data-lists>
           <li class="todo-name main-font data-todos">
