--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="css/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
