--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,9 +27,19 @@
       </div>
 
       <form action="/addtodo" method="POST">
-        <input type="text" placeholder="Add a To Do" name="Add a To Do" />
+        <input type="text" placeholder="Add a To Do" name="todo" />
         <button type="submit" class="submitButton">Submit</button>
       </form>
+
+      <%= todos %>
+
+      <ul class="todos">
+        <% for (let i = 0; i < todos.length; i++) {%> 
+          <li class="todo">
+            <span><%= todos[i].todo %></span>
+          </li>
+        <%} %>
+      </ul>
 
       <div class="to-do-list flexContainer">
         <ul class="task-list center" data-lists>
