trying to fix why css.style does not show

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,13 +31,15 @@
         <button type="submit" class="submitButton">Submit</button>
       </form>
 
-      <ul class="todos">
-        <% for (let i = 0; i < todos.length; i++) {%> 
-          <li class="todo">
+      <div class="to-do-list flexContainer">
+        <ul class="task-list center todos">
+          <% for (let i = 0; i < todos.length; i++) {%>
+          <li class="todo-name main-font todo">
             <span><%= todos[i].todo %></span>
           </li>
-        <%} %>
-      </ul>
+          <%} %>
+        </ul>
+      </div>
 
       <div class="to-do-list flexContainer">
         <ul class="task-list center" data-lists>
