--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="css/font-awesome-4.7.0/css/font-awesome.min.css"
+      href="../css/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
@@ -26,37 +26,21 @@
         <h2 class="todo-title main-font center">To Do's</h2>
       </div>
 
-      <form action="/addtodo" method="POST">
-        <input type="text" placeholder="Add a To Do" name="todo" />
-        <button type="submit" class="submitButton">Submit</button>
-      </form>
-
       <div class="to-do-list flexContainer">
         <ul class="task-list center todos">
           <% for (let i = 0; i < todos.length; i++) {%>
           <li class="todo-name main-font todo">
+            <i class="fa fa-circle-thin co"></i>
             <span><%= todos[i].todo %></span>
           </li>
           <%} %>
         </ul>
       </div>
-
-      <div class="to-do-list flexContainer">
-        <ul class="task-list center" data-lists>
-          <li class="todo-name main-font data-todos">
-            <i class="fa fa-circle-thin co"></i>
-            <span>to do task 1</span>
-          </li>
-          <li class="todo-name main-font data-todos">
-            <i class="fa fa-circle-thin co"></i>
-            <span>Grocery</span>
-          </li>
-          <li class="todo-name main-font data-todos">
-            <i class="fa fa-circle-thin co"></i>
-            <span>Play</span>
-          </li>
-        </ul>
-      </div>
+      
+      <form action="/addtodo" method="POST">
+        <input type="text" placeholder="Add a To Do" name="todo" />
+        <button type="submit" class="submitButton">Submit</button>
+      </form>
     </div>
   </body>
 </html>
