--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,8 @@
   <body>
     <div class="container">
       <header class="flexContainer">
-        <h1 class="title main-font center">Get Shit Done</h1>
+        <h1 class="title main-font center">To Do List</h1>
       </header>
-      <div class="subHeader flexContainer">
-        <h2 class="todo-title main-font center">To Do's</h2>
-      </div>
 
       <form class="center" action="/addtodo" method="POST">
         <input type="text" placeholder="Add a To Do" name="todo" />
