error here. Will revert

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,11 @@ form {
 button {
   margin: 20px 0px
 }
+
+.complete {
+  text-decoration: line-through;
+}
+
+.incomplete {
+  text-decoration: none;
+}
