--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,10 +34,10 @@
         <ul class="task-list center">
           <% for (let i = 0; i < todos.length; i++) {%>
           <li class="todo-name main-font complete-task">
-            <% if (todos.done === true) { %>
-            <span class="done"><%= todos[i].todo %></span>
+            <% if (todos[i].done === true) { %>
+            <span class="complete"><%= todos[i].todo %></span>
             <% } else { %>
-            <span><%= todos[i].todo %></span>
+            <span class="incomplete"><%= todos[i].todo %></span>
             <% } %>
             <span class="fa fa-trash delete-todo"></span>
           </li>
