--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,9 @@
           </li>
           <%} %>
         </ul>
+        
       </div>
+      <h2 class="main-font center">Left to do: <%= left %></h2>
     </div>
     <script type="text/javascript" src="/js/main.js"></script>
   </body>
