--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,18 +32,17 @@
 
       <div class="to-do-list flexContainer">
         <ul class="task-list center">
-          <% for (let i = 0; i < todos.length; i++) {%>
-          <li class="todo-name main-font complete-task">
-            <% if (todos[i].done === true) { %>
-            <span class="complete"><%= todos[i].todo %></span>
+          <% todos.forEach(todo => { %>
+          <li class="todo-name main-font complete-task" data-id="<%=todo._id%>">
+            <% if (todo.done === true) { %>
+            <span class="complete"><%= todo.todo %></span>
             <% } else { %>
-            <span class="incomplete"><%= todos[i].todo %></span>
+            <span class="incomplete"><%= todo.todo %></span>
             <% } %>
             <span class="fa fa-trash delete-todo"></span>
           </li>
-          <%} %>
+          <%}) %>
         </ul>
-        
       </div>
       <h2 class="main-font center">Left to do: <%= left %></h2>
     </div>
